force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Individual rentable units within properties</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Unit</label><nameField><label>Unit Number</label><type>Text</type></nameField><pluralLabel>Units</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>