force-app/main/default/objects/Unit__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField><fullName>Monthly_Rent__c</fullName><description>Monthly rental amount for the unit</description><externalId>false</externalId><label>Monthly Rent</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Currency</type></CustomField>