force-app/main/default/objects/Unit__c/fields/Property__c.field-meta.xml
<CustomField><fullName>Property__c</fullName><description>Master-detail relationship to Property</description><externalId>false</externalId><label>Property</label><referenceTo>Property__c</referenceTo><relationshipLabel>Units</relationshipLabel><relationshipName>Units</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>