force-app/main/default/objects/Unit__c/fields/Square_Feet__c.field-meta.xml
<CustomField><fullName>Square_Feet__c</fullName><description>Unit size in square feet</description><externalId>false</externalId><label>Square Feet</label><precision>6</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Number</type><unique>false</unique></CustomField>