force-app/main/default/objects/Unit__c/fields/Unit_Status__c.field-meta.xml
<CustomField><fullName>Unit_Status__c</fullName><description>Current status of the unit</description><externalId>false</externalId><label>Unit Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Available</fullName><default>true</default><label>Available</label></value><value><fullName>Occupied</fullName><default>false</default><label>Occupied</label></value><value><fullName>Maintenance</fullName><default>false</default><label>Maintenance</label></value><value><fullName>Reserved</fullName><default>false</default><label>Reserved</label></value></valueSetDefinition></valueSet></CustomField>