force-app/main/default/objects/Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField><fullName>Unit_Type__c</fullName><description>Type of unit - Studio, 1BR, 2BR, etc.</description><externalId>false</externalId><label>Unit Type</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Studio</fullName><default>false</default><label>Studio</label></value><value><fullName>1 Bedroom</fullName><default>false</default><label>1 Bedroom</label></value><value><fullName>2 Bedroom</fullName><default>false</default><label>2 Bedroom</label></value><value><fullName>3 Bedroom</fullName><default>false</default><label>3 Bedroom</label></value><value><fullName>Penthouse</fullName><default>false</default><label>Penthouse</label></value><value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value></valueSetDefinition></valueSet></CustomField>